--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,11 @@ yarn-error.log*
 # vercel
 .vercel
 
+# database
+/db/*.db
+/db/*.db-shm
+/db/*.db-wal
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
